style.css
html,body{
    width:100vw;
    height:100vh;
    margin: 0px;
  /*  border-style: solid;
    border-color: red;*/
}  
body{
    width:100vw;
    height:100vh;
   border-style: solid;/*delete at end*/
    border-color: black;
    min-height: 100%;
    display: grid;
    grid-template: minmax(90px, 1fr) minmax(190px,4fr)/ minmax(190px,1fr) minmax(700px,5fr);
}
/*Setting the basic layout*/
.sidebar{
    
    grid-column: 1/3;
    grid-row: 1/-1;
    background-color: #1992D4;

 /*   border-style: solid;
    border-color: brown;*/
}
.header{
    grid-column: 2/3;
    grid-row: 1/2;
    background-color: rgb(255, 255, 255);

  /*  border-style: solid;
    border-color: rgb(216, 11, 223);*/
}
.main-content{
    min-height: 100%;
    grid-column: 2/3;
    grid-row: 2/-1;
    background-color: #E2E8F0;

 /*   border-style: solid;
    border-color: rgb(4, 240, 55);*/
}
/*End of setting basic layout*/

/*Code for sidebar*/
.sidebar{
    display: flex;
    flex-direction: column;
    gap:10px;
    color:white;
   
}
.sidebar .logo {
    
    padding-left:9px;
}
.sidebar .logo li{
    display: flex;
    gap:10px;
    
    svg{
        width: 40px;
        height:40px;
        fill:white;
        align-self: center;
    }
    
}

a{
    text-decoration: none;
    color: rgb(255, 255, 255);
}
.sidebar ul{
    display: flex;
    flex-direction: column;
    gap:15px;
    list-style: none;
    padding:0 0 0 20px;
}
.sidebar ul li{
    
    display: flex;
    gap:21px;
    
    
    svg{
        width: 18px;
        height: 18px;
        fill: white;
        align-self: center;
    }
}


/*End code for sidebar*/

/*Code for header Start*/
.header{
    display: grid;
    grid-template: 1fr 1fr/ 0.75fr 0.5fr;
}

.header .searchbar {
    display: flex;
    align-items: center;
    gap:10px;
    padding-left: 25px;
   
    svg{
    fill:black;
    width:20px;
    height:20px;
    }
    input{
        width: 90%;
        background-color: #E2E8F0;
        border-radius:10px;
        height: 40%;
        border-style: none;
    }
}
.header .user-links{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 15px;
    margin-right:15%;
    svg{
     
        width:20px;
        height:20px;
        
    }
    .user-logo{
        fill:#FACC15;
        width: 40px;
        height: 40px;
        
    }
}

.greeting{
    
 /*   border-style: solid;
    border-color: red;*/
    padding: 0px 0px 20px 20px;
    display: grid;
    grid-template: 1fr / 0.1fr 1fr;
    align-items:start;
    font-size: 1em;
    
    .info{
        display: flex;
        flex-direction:column;
        
        padding-top: 0px;
        p,h2,h5{
            margin-top:0px;
            margin-bottom: 0px;
        }
    }
    svg{
        width: 50px;
        height: 50px;
        fill: #FACC15;
    }
}

.functions{
    
   /* border-style: solid;
    border-color: rgba(36, 12, 250, 0.452);*/
    display: flex;
    gap: 17px;
    justify-content: center;
    
    padding-right: 10px;
    align-items:start;
    .func-button{
        height: 50%;
        padding: 0px 30px 0px 30px;
        font-weight: 950;
        color: white;
        background-color: #1992D4;
        border-radius: 30px;
        border-style: none;
    
    }
    
}
/*Code for header end*/
/*code for main content*/
.main-content{
    display: grid;
    grid-template: minmax(100px,.6fr).5fr/ 1fr .4fr;
    
    
    
}
.projects{
    grid-column: 1/2;
    grid-row: 1/3;
    border-style: solid;
   
    display: grid;
    grid-template-rows: 10% minmax(200px,1fr);
    h3{
        margin : 5px 0px 5px 5px;
    }
    .cards{
        border-style: solid;
        border-color: rgb(78, 2, 255);

        display: grid;
        grid-template: repeat(3,1fr) /repeat(2,1fr) ;
        align-content: start;
        gap: 10px;
        padding: 0px 10px 0px 10px;


    }     
}
.cards > .card{
    font-size: small;
    border-style: none;
    border-left-style: solid;
    border-radius: 11px;
    border-left-width: 7px;
    border-left-color: #F0B429;
    background-color: white;
    padding:10px;
    padding-top: 0px;
    
    svg{
        width: 15px;
        height: 15px;
    }
    .icons{
        display: flex;
        justify-content: flex-end;
        gap:15px
    }
}
.card-title{
    margin-bottom: 0px;
}
.card-text{
    margin-top: 0px;
}


.announcement{
    grid-column: 2/-1;
    grid-row: 1/2;
    border-style: solid;
    border-color: red;
}
.trending{
    grid-column: 2/-1;
    grid-row: 2/-1;
    border-style: solid;
    border-color: blue;

}
/*end code for main content*/

/*Start code for the announcement section*/
#announcement-main-title{
    margin-bottom: 5px;
    
}
.updates-block{
    font-size: x-small;
    display: grid;
    grid-template: repeat(3,1fr)/1fr;
    align-content: start;
    border-radius: 5px;
    background-color: white;
    padding: 10px;
  

}
.announcement1{
    grid-row: 1/2;
    border-style: solid;
    border-color: blue;
}
.announcement2{
    grid-row: 2/3;
    border-style: solid;
    border-color: green;
}
.announcement3{
    grid-row: 3/-1;
    border-style: solid;
    border-color: red;
}

.announcement-title{
    margin-top:0px;
}
.announce-item{
  /*  border-style: solid;
    border-color: purple;*/
}
/* end code the announement section*/

